exports[`test renders default artist 1`] = `
<div className="one-whole soft background--dark-primary" style={{...}}>
<div className="text-light-primary">
<div className="grid floating push-bottom">
<div className="grid__item background--fill floating__item text-left hard push-left ratio--square background--light-secondary one-eighth" style={{...}} />
<div className="floating__item text-left grid__item eight-tenths">
<h5 className="flush">
three
</h5>
<h7 className="text-light-tertiary">
<span>
test album
 – 
</span>
<span>
NewSpring
</span>
</h7>
</div>
</div>
<Link to="/music/1" onClick={[Function]} className="text-light-primary soft-half-top push-ends plain" onlyActiveOnIndex={false} style={{...}}>
<h5>
View Album
</h5>
</Link>
<h5 onClick={[Function]} className="push-ends">
Share
</h5>
</div>
</div>
`;

exports[`test renders with props 1`] = `
<div className="one-whole soft background--dark-primary" style={{...}}>
<div className="text-light-primary">
<div className="grid floating push-bottom">
<div className="grid__item background--fill floating__item text-left hard push-left ratio--square background--light-secondary one-eighth" style={{...}} />
<div className="floating__item text-left grid__item eight-tenths">
<h5 className="flush">
three
</h5>
<h7 className="text-light-tertiary">
<span>
test album
 – 
</span>
<span>
test artist
</span>
</h7>
</div>
</div>
<Link to="/music/1" onClick={[Function]} className="text-light-primary soft-half-top push-ends plain" onlyActiveOnIndex={false} style={{...}}>
<h5>
View Album
</h5>
</Link>
<h5 onClick={[Function]} className="push-ends">
Share
</h5>
</div>
</div>
`;

exports[`test sectionStyles returns styles 1`] = `
Object {
  "bottom": "60px",
  "position": "absolute",
}
`;
